[package]
name = "rust-perf-gallery"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profiles.release]
debug = "0"
panic = "abort"
